--- a/app/src/main/res/layout/fragment_aospex.xml
+++ b/app/src/main/res/layout/fragment_aospex.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -21,7 +21,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -49,7 +49,7 @@
                 android:layout_marginEnd="84dp"
                 android:layout_marginRight="84dp"
                 android:layout_marginBottom="8dp"
-                android:fontFamily="@font/timeburnernormal"
+                android:fontFamily="@font/raleway"
                 android:text="ABTheme AOSPExtended"
                 android:textColor="#21ef8b"
                 android:textSize="26sp"
@@ -70,14 +70,14 @@
                 android:layout_marginRight="10dp"
                 android:fontFamily="@font/timeburnernormal"
                 android:gravity="center"
-                android:text="@string/lastUpdate_aospex"
+                android:text="@string/cloudTheme"
                 android:textSize="14sp"
 
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/cardView4" />
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/cardView4"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
@@ -99,7 +99,7 @@
                 app:layout_constraintVertical_bias="0.0"
                 android:foreground="?android:attr/selectableItemBackground">
 
-                <android.support.constraint.ConstraintLayout
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
@@ -112,20 +112,19 @@
                         android:layout_marginTop="8dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginRight="8dp"
-                        android:layout_marginBottom="8dp"
                         android:fontFamily="@font/timeburnernormal"
-                        android:text="@string/version_aospex"
+                        android:text="@string/download"
                         android:textColor="#000"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
-                </android.support.constraint.ConstraintLayout>
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
-            </android.support.v7.widget.CardView>
-        </android.support.constraint.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
 
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
